--- a/Foodie/src/components/PostDisplay.css
+++ b/Foodie/src/components/PostDisplay.css
@@ -4,7 +4,8 @@
     grid-template-columns: auto 1fr;
     padding-inline: 20px;
     color: black;
-    padding: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
 }
 
 .headding_post{
